--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <div class="card">
                         <img src="Img Productos\AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">AMD RYZEN 5 5600GT</h5>
+                            <p class="card-text">AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.</p>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <div class="card">
                         <img src="Img Productos\Intel Core i7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Intel Core i7</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>  
                     </div>
@@ -125,8 +125,8 @@
                     <div class="card">
                         <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                            <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
+                            <p class="card-text">MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC</p>
                         </div>  
                     </div>
                 </div>
@@ -136,8 +136,8 @@
                     <div class="card">
                         <img src="Img Productos\Gigabyte GeForce RTX 2080 Ti 11GB WindForce OC.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Gigabyte GeForce RTX 2080 Ti</h5>
+                            <p class="card-text">igabyte GeForce RTX 2080 Ti 11GB WindForce OC.</p>
                         </div>
                     </div>  
                 </div>
@@ -147,8 +147,8 @@
                     <div class="card">
                         <img src="Img Productos\Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3).jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Gigabyte Technology B360M AORUS</h5>
+                            <p class="card-text">Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3)</p>
                         </div>
                     </div>
                 </div>
@@ -158,8 +158,8 @@
                     <div class="card">
                         <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
+                            <p class="card-text">MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.</p>
                         </div>
                     </div>
                 </div> 
@@ -169,8 +169,8 @@
                     <div class="card">
                         <img src="Img Productos\PLACAS BASE.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                            <h5 class="card-title">ASUS Z390-A</h5>
+                            <p class="card-text">Intel LGA 1151 ATX motherboard with AI Overclocking, DDR4 4266 MHz, Dual M.2, HDMI, Intel Optane memory ready, SATA 6Gb/s, USB 3.1 Gen 2 Type-C</p>
                         </div>
                     </div>
                 </div>
@@ -180,8 +180,8 @@
                     <div class="card">
                         <img src="Img Productos\PROCESADORES.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Intel Pentium</h5>
+                            <p class="card-text">Procesador Intel® Pentium® 4, 1,60 GHz, caché de 256 K, FSB de 400 MHz</p>
                         </div>  
                     </div>
                 </div>
@@ -199,8 +199,8 @@
                 </div>
                 <div class="col-md-4 text-mapa">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Shopping Alto Avellaneda</h5>
+                        <p class="card-text">Encontranos en el Shopping Alto Avellaneda: Gral. Güemes 897, B1873 Crucecita, Provincia de Buenos Aires</p>
                     </div>
                 </div>
             </div>
