--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
             <h2 class="label-productos-destacados chakra-petch-regular">Nuestra Ubicacion</h2>
             <div class="row g-0">
                 <div class="col-md-8 mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d13124.496214310413!2d-58.39076072638178!3d-34.67681842053516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x95bccc97db8e59df%3A0x6d586931cfe295d8!2sOutlet%20Rivadavia%2C%20Av.%20Pres.%20Bernardino%20Rivadavia%201220%2C%20B1868EWN%20Pi%C3%B1eyro%2C%20Provincia%20de%20Buenos%20Aires!3m2!1d-34.6728966!2d-58.394321999999995!4m5!1s0x95a33334248ec25d%3A0x438c219aee66c1bb!2sAlto%20Avellaneda%20Shopping!3m2!1d-34.6754783!2d-58.367456999999995!5e0!3m2!1ses-419!2sar!4v1713961470836!5m2!1ses-419!2sar" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.177322603514!2d-58.37003192338949!3d-34.67547386129274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33334248ec25d%3A0x438c219aee66c1bb!2sAlto%20Avellaneda%20Shopping!5e0!3m2!1ses-419!2sar!4v1718486070580!5m2!1ses-419!2sar" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
                 <div class="col-md-4 text-mapa">
                     <div class="card-body">
                         <h5 class="card-title">Shopping Alto Avellaneda</h5>
