Arreglo de Footer

--- a/Preguntas-Frecuentes.html
+++ b/Preguntas-Frecuentes.html
@@ -148,7 +148,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="fixed-bottom">
+    <footer class="footer">
         <div class="card footer-pag">
             <div class="card-body row">
                 <div class="col">
