--- a/Producto.html
+++ b/Producto.html
@@ -77,8 +77,8 @@
     <br><br>
 
     <section class="section-producto">
-        <div class="producto">
-            <div class="borde-contenedor producto-container">
+        <div class="producto borde-contenedor">
+            <div class="producto-container">
                 <div class="contenedor-imagen-producto">
                     <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg"
                         alt="">
@@ -120,9 +120,47 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div>
+            <div class="detalles-producto">
+                <div>
+                    <h4>Caracteristicas generales</h4>
+                    <p>Tipo
+                        pcie
+                        Chipset Gpu
+                        RX 6650 XT
+                        Entrada Video
+                        No
+                        Puente Para Sli/croosfirex
+                        -
+                        Doble Puente
+                        No
+                        Características Especiales
+                        Ray Tracing</p>
+                </div>
+                <div>
+                    <h4>Conectividad</h4>
+                    <p>
+                        Vga
+                        0
+                        Dvi Digital
+                        0
+                        Hdmi
+                        1
+                        Displayports
+                        3
+                        Usb Type-c
 
+                    </p>
+                </div>
+                <div>
+                    <h4>Dimensiones</h4>
+                    <p>Ancho De La Placa
+                        131 mm
+                        Largo De La Placa
+                        241 mm
+                        Espesor De La Placa
+                        2.0 slots</p>
+                </div>
+            </div>
         </div>
     </section>
 
