se linkeo producto con los productos destacados del index

--- a/Producto.html
+++ b/Producto.html
@@ -127,7 +127,7 @@
                         Tipo
                         pcie
                         Chipset Gpu
-                        RX 6650 XT
+                        RTX 2060 SUPER
                         Entrada Video
                         No
                         Puente Para Sli/croosfirex
