Actualizacion Carrito - Productos

--- a/Productos.html
+++ b/Productos.html
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-8">
             <div class="row row-cols-1 row-cols-md-4 g-4">
-                <a href="#" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.jpg" class="card-img-top" alt="...">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="card-producto" class="card-producto">
+                <a href="Producto.html" class="card-producto" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\Intel Core i7.jpg" class="card-img-top" alt="...">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\Gigabyte GeForce RTX 2080 Ti 11GB WindForce OC.jpg" class="card-img-top" alt="...">
@@ -128,7 +128,7 @@
                         </div>  
                     </div>
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3).jpg" class="card-img-top" alt="...">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
@@ -150,7 +150,7 @@
                         </div>
                     </div> 
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\PLACAS BASE.jpg" class="card-img-top" alt="...">
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="card-producto">
+                <a href="Producto.html" class="card-producto">
                     <div class="col">
                         <div class="card">
                             <img src="Img Productos\PROCESADORES.jpg" class="card-img-top" alt="...">
