--- a/Producto.html
+++ b/Producto.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="Productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="button-navbar">
+                        <a href="index.html" class="button-navbar">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024"
                                 stroke-width="0" fill="currentColor" stroke="currentColor" class="icon-navbar">
                                 <path
