cambio boton producto

--- a/Producto.html
+++ b/Producto.html
@@ -115,8 +115,14 @@
                                 </svg> Envios a todo el pais
                             </p>
                         </div>
-                        <br>
-                        <button type="button" class="btn btn-warning">Sumar al carrito</button>
+                        <br><br>
+                        <div class="boton-agregar-carrito">
+                            <button class="ui-btn">
+                                <span>
+                                    Agregar al carrito
+                                </span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -167,8 +173,6 @@
             </div>
         </div>
     </section>
-
-
 
     <!-- Footer -->
     <footer>
