--- a/Productos.html
+++ b/Productos.html
@@ -199,7 +199,17 @@
     <footer>
         <div class="card footer-pag">
             <div class="card-body row">
-                <div class="col">
+                <div class="col-4 boton-faq">
+                    <a href="#" class="">Sobre nosotros</a><br>
+                    <a href="Preguntas-Frecuentes.html" class="">Preguntas frecuentes</a><br>
+                    <a href="#" class="">Terminos y condiciones</a>
+                </div>
+                <div class="col boton-volver">
+                    <a href="#" class="Btn">
+                        <svg height="1.2em" class="arrow" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"></path></svg>
+                    </a>
+                </div>
+                <div class="col-4 texto-footer">
                     <div class="texto-redes-footer">
                         Nuestras Redes
                     </div>
@@ -263,15 +273,6 @@
                             </button>
                         </a>
                     </div>
-                </div>
-                <div class="col texto-footer text-center">
-                    <h6>Copyright 2024</h6>
-                    <h6>FAQ</h6>
-                </div>
-                <div class="col botones-footer">
-                    <a href="Preguntas-Frecuentes.html" class="">Preguntas frecuentes</a>
-                    <br>
-                    <a href="#" class="">Terminos y condiciones</a>
                 </div>
             </div>
         </div>
