modificacion al slider de marcas en productos

--- a/Productos.html
+++ b/Productos.html
@@ -206,7 +206,8 @@
 
     <!-- marcas-->
     <div class="productos-contenedor borde-contenedor">
-        <div class="swiffy-slider">
+        <div class="swiffy-slider slider-nav-autoplay slider-nav-autostop slider-item-snapstart"
+            data-slider-nav-autoplay-interval="4000">
             <ul class="slider-container">
                 <li>
                     <img src="Img Logo Marcas\Logo adata.jpg" class="img-marca" alt="...">
@@ -226,7 +227,15 @@
                     <img src="Img Logo Marcas\Logo ViewSonic.jpg" class="img-marca" alt="">
                     <img src="Img Logo Marcas\Logo WesternDigital.jpg" class="img-marca" alt="">
                 </li>
-
+                <li>
+                    <img src="Img Logo Marcas\Logo Kolink.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo LianLi.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo Logitech.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo Republic of gamers.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo TForce.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo ViewSonic.jpg" class="img-marca" alt="">
+                    <img src="Img Logo Marcas\Logo WesternDigital.jpg" class="img-marca" alt="">
+                </li>
             </ul>
 
             <button type="button" class="slider-nav"></button>
