--- a/Registro.html
+++ b/Registro.html
@@ -67,7 +67,7 @@
 
     <!-- Registrarse -->
     <div class="box-perfil">
-        <h2 class="label-perfil chakra-petch-regular">Perfil</h2>
+        <h2 class="label-perfil chakra-petch-regular">Registro</h2>
         <form action="" class="formulario-perfil">
             <div class="input-group mb-3">
                 <span class="input-group-text span-perfil" id="basic-addon1">Nombre</span>
