--- a/Carrito.html
+++ b/Carrito.html
@@ -69,180 +69,10 @@
     <div class="productos-carrito borde-contenedor">
         <h4 class="label-carrito chakra-petch-regular">Carrito de compras</h4>
         <hr class="hr-divisoria">
-        <div class="card mb-3 card-carrito">
-            <div class="row g-0">
-                <div class="col-6 col-md-4">
-                    <img src="Img Productos\Gigabyte GeForce RTX 2080 Ti 11GB WindForce OC.jpg" class="img-fluid rounded-start img-carrito" alt="...">
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Placa de video Gigabyte GeForce RTX 2080 Ti 11GB</h5>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <div class="number-control">
-                            <div class="number-left"></div>
-                                <input type="number" name="number" class="number-quantity">
-                            <div class="number-right"></div>
-                        </div>
-                    </div>
-                    <button class="button-eliminar">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 14" class="svgIcon bin-top" >
-                            <g clip-path="url(#clip0_35_24)">
-                                <path fill="black" d="M20.8232 2.62734L19.9948 4.21304C19.8224 4.54309 19.4808 4.75 19.1085 4.75H4.92857C2.20246 4.75 0 6.87266 0 9.5C0 12.1273 2.20246 14.25 4.92857 14.25H64.0714C66.7975 14.25 69 12.1273 69 9.5C69 6.87266 66.7975 4.75 64.0714 4.75H49.8915C49.5192 4.75 49.1776 4.54309 49.0052 4.21305L48.1768 2.62734C47.3451 1.00938 45.6355 0 43.7719 0H25.2281C23.3645 0 21.6549 1.00938 20.8232 2.62734ZM64.0023 20.0648C64.0397 19.4882 63.5822 19 63.0044 19H5.99556C5.4178 19 4.96025 19.4882 4.99766 20.0648L8.19375 69.3203C8.44018 73.0758 11.6746 76 15.5712 76H53.4288C57.3254 76 60.5598 73.0758 60.8062 69.3203L64.0023 20.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_24">
-                                    <rect fill="white" height="14" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 57" class="svgIcon bin-bottom">
-                            <g clip-path="url(#clip0_35_22)">
-                                <path fill="black" d="M20.8232 -16.3727L19.9948 -14.787C19.8224 -14.4569 19.4808 -14.25 19.1085 -14.25H4.92857C2.20246 -14.25 0 -12.1273 0 -9.5C0 -6.8727 2.20246 -4.75 4.92857 -4.75H64.0714C66.7975 -4.75 69 -6.8727 69 -9.5C69 -12.1273 66.7975 -14.25 64.0714 -14.25H49.8915C49.5192 -14.25 49.1776 -14.4569 49.0052 -14.787L48.1768 -16.3727C47.3451 -17.9906 45.6355 -19 43.7719 -19H25.2281C23.3645 -19 21.6549 -17.9906 20.8232 -16.3727ZM64.0023 1.0648C64.0397 0.4882 63.5822 0 63.0044 0H5.99556C5.4178 0 4.96025 0.4882 4.99766 1.0648L8.19375 50.3203C8.44018 54.0758 11.6746 57 15.5712 57H53.4288C57.3254 57 60.5598 54.0758 60.8062 50.3203L64.0023 1.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_22">
-                                    <rect fill="white" height="57" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="card mb-3 card-carrito">
-            <div class="row g-0">
-                <div class="col-6 col-md-4">
-                    <img src="Img Productos\PROCESADORES.jpg" class="img-fluid rounded-start img-carrito" alt="...">
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Procesador intel pentium ultra potente picuso</h5>
-                    </div>
-                </div>               
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <div class="number-control">
-                            <div class="number-left"></div>
-                                <input type="number" name="number" class="number-quantity">
-                            <div class="number-right"></div>
-                        </div>
-                    </div>
-                    <button class="button-eliminar">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 14" class="svgIcon bin-top" >
-                            <g clip-path="url(#clip0_35_24)">
-                                <path fill="black" d="M20.8232 2.62734L19.9948 4.21304C19.8224 4.54309 19.4808 4.75 19.1085 4.75H4.92857C2.20246 4.75 0 6.87266 0 9.5C0 12.1273 2.20246 14.25 4.92857 14.25H64.0714C66.7975 14.25 69 12.1273 69 9.5C69 6.87266 66.7975 4.75 64.0714 4.75H49.8915C49.5192 4.75 49.1776 4.54309 49.0052 4.21305L48.1768 2.62734C47.3451 1.00938 45.6355 0 43.7719 0H25.2281C23.3645 0 21.6549 1.00938 20.8232 2.62734ZM64.0023 20.0648C64.0397 19.4882 63.5822 19 63.0044 19H5.99556C5.4178 19 4.96025 19.4882 4.99766 20.0648L8.19375 69.3203C8.44018 73.0758 11.6746 76 15.5712 76H53.4288C57.3254 76 60.5598 73.0758 60.8062 69.3203L64.0023 20.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_24">
-                                    <rect fill="white" height="14" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 57" class="svgIcon bin-bottom">
-                            <g clip-path="url(#clip0_35_22)">
-                                <path fill="black" d="M20.8232 -16.3727L19.9948 -14.787C19.8224 -14.4569 19.4808 -14.25 19.1085 -14.25H4.92857C2.20246 -14.25 0 -12.1273 0 -9.5C0 -6.8727 2.20246 -4.75 4.92857 -4.75H64.0714C66.7975 -4.75 69 -6.8727 69 -9.5C69 -12.1273 66.7975 -14.25 64.0714 -14.25H49.8915C49.5192 -14.25 49.1776 -14.4569 49.0052 -14.787L48.1768 -16.3727C47.3451 -17.9906 45.6355 -19 43.7719 -19H25.2281C23.3645 -19 21.6549 -17.9906 20.8232 -16.3727ZM64.0023 1.0648C64.0397 0.4882 63.5822 0 63.0044 0H5.99556C5.4178 0 4.96025 0.4882 4.99766 1.0648L8.19375 50.3203C8.44018 54.0758 11.6746 57 15.5712 57H53.4288C57.3254 57 60.5598 54.0758 60.8062 50.3203L64.0023 1.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_22">
-                                    <rect fill="white" height="57" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="card mb-3 card-carrito">
-            <div class="row g-0">
-                <div class="col-6 col-md-4">
-                    <img src="Img Productos\AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.jpg" class="img-fluid rounded-start img-carrito" alt="...">
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Procesador AMD Ryzen 5 5600GT</h5>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <div class="number-control">
-                            <div class="number-left"></div>
-                                <input type="number" name="number" class="number-quantity">
-                            <div class="number-right"></div>
-                        </div>
-                    </div>
-                    <button class="button-eliminar">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 14" class="svgIcon bin-top" >
-                            <g clip-path="url(#clip0_35_24)">
-                                <path fill="black" d="M20.8232 2.62734L19.9948 4.21304C19.8224 4.54309 19.4808 4.75 19.1085 4.75H4.92857C2.20246 4.75 0 6.87266 0 9.5C0 12.1273 2.20246 14.25 4.92857 14.25H64.0714C66.7975 14.25 69 12.1273 69 9.5C69 6.87266 66.7975 4.75 64.0714 4.75H49.8915C49.5192 4.75 49.1776 4.54309 49.0052 4.21305L48.1768 2.62734C47.3451 1.00938 45.6355 0 43.7719 0H25.2281C23.3645 0 21.6549 1.00938 20.8232 2.62734ZM64.0023 20.0648C64.0397 19.4882 63.5822 19 63.0044 19H5.99556C5.4178 19 4.96025 19.4882 4.99766 20.0648L8.19375 69.3203C8.44018 73.0758 11.6746 76 15.5712 76H53.4288C57.3254 76 60.5598 73.0758 60.8062 69.3203L64.0023 20.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_24">
-                                    <rect fill="white" height="14" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 57" class="svgIcon bin-bottom">
-                            <g clip-path="url(#clip0_35_22)">
-                                <path fill="black" d="M20.8232 -16.3727L19.9948 -14.787C19.8224 -14.4569 19.4808 -14.25 19.1085 -14.25H4.92857C2.20246 -14.25 0 -12.1273 0 -9.5C0 -6.8727 2.20246 -4.75 4.92857 -4.75H64.0714C66.7975 -4.75 69 -6.8727 69 -9.5C69 -12.1273 66.7975 -14.25 64.0714 -14.25H49.8915C49.5192 -14.25 49.1776 -14.4569 49.0052 -14.787L48.1768 -16.3727C47.3451 -17.9906 45.6355 -19 43.7719 -19H25.2281C23.3645 -19 21.6549 -17.9906 20.8232 -16.3727ZM64.0023 1.0648C64.0397 0.4882 63.5822 0 63.0044 0H5.99556C5.4178 0 4.96025 0.4882 4.99766 1.0648L8.19375 50.3203C8.44018 54.0758 11.6746 57 15.5712 57H53.4288C57.3254 57 60.5598 54.0758 60.8062 50.3203L64.0023 1.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_22">
-                                    <rect fill="white" height="57" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="card mb-3 card-carrito">
-            <div class="row g-0">
-                <div class="col-6 col-md-4">
-                    <img src="Img Productos\compragamer_Imganen_general_38985_Placa_de_Video_ASUS_GeForce_RTX_4060_8GB_GDDR6_Dual_White_OC_dc6dd37e-grn.jpg" class="img-fluid rounded-start img-carrito" alt="...">
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Placa de video asus geforce rtx 4060 8gb gddr6 dual white oc</h5>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4">
-                    <div class="card-body">
-                        <div class="number-control">
-                            <div class="number-left"></div>
-                                <input type="number" name="number" class="number-quantity">
-                            <div class="number-right"></div>
-                        </div>
-                    </div>
-                    <button class="button-eliminar">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 14" class="svgIcon bin-top" >
-                            <g clip-path="url(#clip0_35_24)">
-                                <path fill="black" d="M20.8232 2.62734L19.9948 4.21304C19.8224 4.54309 19.4808 4.75 19.1085 4.75H4.92857C2.20246 4.75 0 6.87266 0 9.5C0 12.1273 2.20246 14.25 4.92857 14.25H64.0714C66.7975 14.25 69 12.1273 69 9.5C69 6.87266 66.7975 4.75 64.0714 4.75H49.8915C49.5192 4.75 49.1776 4.54309 49.0052 4.21305L48.1768 2.62734C47.3451 1.00938 45.6355 0 43.7719 0H25.2281C23.3645 0 21.6549 1.00938 20.8232 2.62734ZM64.0023 20.0648C64.0397 19.4882 63.5822 19 63.0044 19H5.99556C5.4178 19 4.96025 19.4882 4.99766 20.0648L8.19375 69.3203C8.44018 73.0758 11.6746 76 15.5712 76H53.4288C57.3254 76 60.5598 73.0758 60.8062 69.3203L64.0023 20.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_24">
-                                    <rect fill="white" height="14" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 57" class="svgIcon bin-bottom">
-                            <g clip-path="url(#clip0_35_22)">
-                                <path fill="black" d="M20.8232 -16.3727L19.9948 -14.787C19.8224 -14.4569 19.4808 -14.25 19.1085 -14.25H4.92857C2.20246 -14.25 0 -12.1273 0 -9.5C0 -6.8727 2.20246 -4.75 4.92857 -4.75H64.0714C66.7975 -4.75 69 -6.8727 69 -9.5C69 -12.1273 66.7975 -14.25 64.0714 -14.25H49.8915C49.5192 -14.25 49.1776 -14.4569 49.0052 -14.787L48.1768 -16.3727C47.3451 -17.9906 45.6355 -19 43.7719 -19H25.2281C23.3645 -19 21.6549 -17.9906 20.8232 -16.3727ZM64.0023 1.0648C64.0397 0.4882 63.5822 0 63.0044 0H5.99556C5.4178 0 4.96025 0.4882 4.99766 1.0648L8.19375 50.3203C8.44018 54.0758 11.6746 57 15.5712 57H53.4288C57.3254 57 60.5598 54.0758 60.8062 50.3203L64.0023 1.0648Z"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_35_22">
-                                    <rect fill="white" height="57" width="69"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </button>
-                </div>
-            </div>
+        <div id="container-productos">
         </div>
         <hr class="hr-divisoria">
-        <h4 class="label-precio chakra-petch-regular">$999.999</h4>
+        <h4 id="precio-bruto" class="label-precio chakra-petch-regular">$999.999</h4>
     </div>
 
     <!-- Detalles envio -->
@@ -408,7 +238,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-4">
-                <h4 class="label-precio chakra-petch-regular">$999.999</h4>
+                <h4 id="precio-envio" class="label-precio chakra-petch-regular">$999.999</h4>
             </div>
         </div>
     </div>
@@ -446,7 +276,7 @@
         <hr class="hr-divisoria">
         <div class="row">
             <div class="col">
-                <h4 class="label-precio-final chakra-petch-regular">Precio Final: $999.999</h4>
+                <h4 id="precio-final" class="label-precio-final chakra-petch-regular">Precio Final: $999.999</h4>
             </div>
             <div class="col">
                 <div class="boton-comprar">
@@ -543,6 +373,7 @@
         </div>
     </footer>
     
+    <script src="./Scripts/Carrito.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
