--- a/Productos.html
+++ b/Productos.html
@@ -75,109 +75,26 @@
     </div>
 
     <!-- Productos -->
-    <div class="productos-contenedor row borde-contenedor">
+    <div class="productos-contenedor borde-contenedor">
         <h2 class="label-productos chakra-petch-regular">Productos</h2>
-        <div class="col-md-4">
-            <div class="filtros-productos">
-                <h4 class="label-filtros chakra-petch-regular">Filtros</h4>
-            </div>
+        <div class="btn-group boton-ordenar">
+            <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                Ordenar Por
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Menor precio</a></li>
+                <li><a class="dropdown-item" href="#">Mayor precio</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Mas relevantes</a></li>
+            </ul>
         </div>
-        <div class="col-md-8">
-            <div class="row row-cols-1 row-cols-md-4 g-4">
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">AMD RYZEN 5 5600GT</h5>
-                                <p class="card-text">AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\Intel Core i7.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Intel Core i7</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>  
-                        </div>
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
-                                <p class="card-text">MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC</p>
-                            </div>  
-                        </div>
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\Gigabyte GeForce RTX 2080 Ti 11GB WindForce OC.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Gigabyte GeForce RTX 2080 Ti</h5>
-                                <p class="card-text">igabyte GeForce RTX 2080 Ti 11GB WindForce OC.</p>
-                            </div>
-                        </div>  
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3).jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Gigabyte Technology B360M AORUS</h5>
-                                <p class="card-text">Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3)</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
-                                <p class="card-text">MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.</p>
-                            </div>
-                        </div>
-                    </div> 
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\PLACAS BASE.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">ASUS Z390-A</h5>
-                                <p class="card-text">Intel LGA 1151 ATX motherboard with AI Overclocking, DDR4 4266 MHz, Dual M.2, HDMI, Intel Optane memory ready, SATA 6Gb/s, USB 3.1 Gen 2 Type-C</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <a href="Producto.html" class="card-producto">
-                    <div class="col">
-                        <div class="card">
-                            <img src="Img Productos\PROCESADORES.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Intel Pentium</h5>
-                                <p class="card-text">Procesador Intel® Pentium® 4, 1,60 GHz, caché de 256 K, FSB de 400 MHz</p>
-                            </div>  
-                        </div>
-                    </div>
-                </a>
-            </div>           
-        </div>
+        <div id="contenedor" class="row row-cols-md-4 g-4">
+
+        </div>           
     </div>
 
     <!-- marcas-->
-    <div class="productos-contenedor borde-contenedor">
+    <div class="marcas-contenedor borde-contenedor-marcas borde-contenedor">
         <img src="Img Logo Marcas\Logo adata.jpg" class="img-marca" alt="...">
         <img src="Img Logo Marcas\Logo AMD.jpg" class="img-marca" alt="...">
         <img src="Img Logo Marcas\Logo ASRock.jpg" class="img-marca" alt="">
@@ -279,5 +196,6 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./Scripts/Productos.js"></script>
 </body>
 </html>
