--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- -> ToDoList
+    · X     Programar JS de seccion productos destacados para que se carguen dinamicamente X
+    · X     Agregar API de envio de gmail y comprobar funcionamiento 
+    · X Agregar datos de 8 productos mas para rellenar el contenido correctamente 
+    · Programar OrdenarPor de Productos
+    · Buscar alternativa para los alert que se muestran
+    · Limpiar console.logs de la pagina
+    · Agregar al finalizar compra un html u alert que muestre una "Factura" con los datos de la compra
+    · Agregar mas datos al mapa de ubicacion
+    · Crear html de Sobre Nosotros o sacar la opcion del footer (Si no tengo tiempo de recontra sobra lo saco porque no me lo pidio nadie)
+-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Img Iconos\corona.png">
     <title>HardwareKing</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -115,95 +126,8 @@
     <!-- Productos destacados -->
     <div class="productos-destacados borde-contenedor">
         <h2 class="label-productos-destacados chakra-petch-regular">Productos Destacados</h2>
-        <div class="row row-cols-md-4 g-4">
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\AMD RYZEN 5 5600GT 6-Core 3_6GHZ AM4 CPU.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">AMD RYZEN 5 5600GT</h5>
-                            <p class="card-text">999.999</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="./Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\Intel Core i7.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Intel Core i7</h5>
-                            <p class="card-text">999.999</p>
-                        </div>  
-                    </div>
-                </div>
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
-                            <p class="card-text">999.999</p>
-                        </div>  
-                    </div>
-                </div>
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\Gigabyte GeForce RTX 2080 Ti 11GB WindForce OC.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Gigabyte GeForce RTX 2080 Ti</h5>
-                            <p class="card-text">999.999</p>
-                        </div>
-                    </div>  
-                </div>
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\Gigabyte Technology B360M AORUS Gaming 3 Socket 1151, Placa Base, Cranberry (GA-B360-3).jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Gigabyte Technology B360M AORUS</h5>
-                            <p class="card-text">999.999</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\MSI Gaming GeForce RTX 2060 Super 8GB GDRR6 256-Bit HDMI_DP G-SYNC.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">MSI Gaming GeForce RTX 2060</h5>
-                            <p class="card-text">999.999</p>
-                        </div>
-                    </div>
-                </div> 
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\PLACAS BASE.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">ASUS Z390-A</h5>
-                            <p class="card-text">999.999</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="Producto.html" class="card-producto">
-                <div class="col">
-                    <div class="card">
-                        <img src="Img Productos\PROCESADORES.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Intel Pentium</h5>
-                            <p class="card-text">999.999</p>
-                        </div>  
-                    </div>
-                </div>
-            </a>
+        <div id="contenedor-productos-destacados" class="row row-cols-md-4 g-4">
+
         </div>
     </div>
 
@@ -292,9 +216,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="./Scripts/home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
 </html>
