Segundo parcial finalizado

--- a/Carrito.html
+++ b/Carrito.html
@@ -231,10 +231,10 @@
                     <label class="btn btn-tipo-envio" for="option1">Domicilio</label>
                     
                     <input type="radio" class="btn-check" name="optiones-envio" id="option2" autocomplete="off">
-                    <label class="btn btn-tipo-envio" for="option2">Sucursal</label>
+                    <label class="btn btn-tipo-envio" for="option2">Sucursal Correo Argentino</label>
                                         
                     <input type="radio" class="btn-check" name="optiones-envio" id="option3" autocomplete="off">
-                    <label class="btn btn-tipo-envio" for="option3">Mensajeria</label>
+                    <label class="btn btn-tipo-envio" for="option3">Nuestro Local</label>
                 </div>
             </div>
             <div class="col-6 col-md-4">
@@ -280,7 +280,7 @@
             </div>
             <div class="col">
                 <div class="boton-comprar">
-                    <button class="ui-btn">
+                    <button class="ui-btn" onclick="FinalizarCompra()">
                         <span>
                             Finalizar Compra
                         </span>
