--- a/Productos.html
+++ b/Productos.html
@@ -94,24 +94,13 @@
     <!-- Productos -->
     <div class="productos-contenedor borde-contenedor">
         <h2 class="label-productos chakra-petch-regular">Productos</h2>
-        <div class="btn-group boton-ordenar">
-            <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                Ordenar Por
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Menor precio</a></li>
-                <li><a class="dropdown-item" href="#">Mayor precio</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Mas relevantes</a></li>
-            </ul>
-        </div>
         <div id="contenedor" class="row row-cols-md-4 g-4">
 
         </div>           
     </div>
 
     <!-- marcas-->
-    <div class="productos-contenedor borde-contenedor">
+    <div class="productos-contenedor borde-contenedor  slider-marcas">
         <div class="swiffy-slider slider-nav-autoplay slider-nav-autostop slider-item-snapstart"
             data-slider-nav-autoplay-interval="4000">
             <ul class="slider-container">
@@ -215,5 +204,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./Scripts/Productos.js"></script>
 </body>
-
 </html>
