--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- -> ToDoList
-    · X     Programar JS de seccion productos destacados para que se carguen dinamicamente X
-    · X     Agregar API de envio de gmail y comprobar funcionamiento 
-    · X Agregar datos de 8 productos mas para rellenar el contenido correctamente 
-    · Programar OrdenarPor de Productos
-    · Buscar alternativa para los alert que se muestran
-    · Limpiar console.logs de la pagina
-    · Agregar al finalizar compra un html u alert que muestre una "Factura" con los datos de la compra
-    · Agregar mas datos al mapa de ubicacion
-    · Crear html de Sobre Nosotros o sacar la opcion del footer (Si no tengo tiempo de recontra sobra lo saco porque no me lo pidio nadie)
--->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -145,9 +133,18 @@
                 <div class="col-md-4 text-mapa">
                     <div class="card-body">
                         <h5 class="card-title">Shopping Alto Avellaneda</h5>
-                        <p class="card-text">Encontranos en el Shopping Alto Avellaneda: Gral. Güemes 897, B1873
-                            Crucecita, Provincia de Buenos Aires</p>
+                        <p class="card-text">
+                            Encontranos en el Shopping Alto Avellaneda:
+                            <br>Gral. Güemes 897, B1873 Crucecita
+                            <br>Provincia de Buenos Aires</p>
                         <hr class="hr-divisoria">
+                        <h5 class="card-title">Horarios De Atención</h5>
+                        <p class="card-text">
+                            · Lunes a Viernes de 09:00 a 20:00hs
+                            <br>
+                            · Sábados de 09:00 a 22:00hs</p>
+                        <hr class="hr-divisoria">
+                        <h5 class="card-title">Te esperamos!</h5>
                     </div>
                 </div>
             </div>
